<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F2F3F9"
        android:padding="30dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categorias"
            android:layout_width="322dp"
            android:layout_height="175dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/tv_game"
            android:textColor="#181C31"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/tv_difficulty"
            android:textColor="#565D94"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/tv_categories"
            android:textColor="#565D94"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tv_medio"
            app:layout_constraintVertical_bias="0.005" />

        <Button
            android:id="@+id/bt_facil"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_circle_easy"
            android:text="1"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/categorias"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/bt_medio"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:background="@drawable/button_circle_medium"
            android:text="2"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/bt_facil"
            app:layout_constraintTop_toTopOf="@+id/bt_facil" />

        <Button
            android:id="@+id/bt_dificil"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/button_circle_hard"
            android:text="3"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/categorias"
            app:layout_constraintHorizontal_bias="0.76"
            app:layout_constraintStart_toEndOf="@+id/bt_medio"
            app:layout_constraintTop_toTopOf="@+id/bt_facil" />

        <Button
            android:id="@+id/bt_play"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_game"
            android:text="@string/et_play"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/bt_logoff"
            app:layout_constraintEnd_toEndOf="@+id/categorias"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/categorias"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_facil"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:text="@string/tv_easy"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/bt_facil"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/bt_facil"
            app:layout_constraintTop_toBottomOf="@+id/bt_facil" />

        <TextView
            android:id="@+id/tv_medio"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:text="@string/tv_medium"
            android:textAlignment="center"
            android:textColor="@android:color/tertiary_text_light"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/bt_medio"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/bt_medio"
            app:layout_constraintTop_toBottomOf="@+id/bt_medio" />

        <TextView
            android:id="@+id/tv_dificil"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:text="@string/tv_hard"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/bt_dificil"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/bt_dificil"
            app:layout_constraintTop_toBottomOf="@+id/bt_dificil" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="322dp"
            android:layout_height="121dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/shadow"
            android:src="@drawable/layout_bg"
            app:layout_constraintEnd_toEndOf="@+id/categorias"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/categorias"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/et_welcome"
            android:textColor="#2C2828"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/bt_logoff"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@drawable/button_logoff"
            android:text="@string/et_logoff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/bt_play"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/bt_play" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>